[package]
name = "MultipurposeCLI"
version = "0.1.0"
edition = "2024"

[dependencies]
walkdir = "2.5.0"
dirs = "6.0.0"
clap = { version = "4", features = ["derive"] }
dashmap = "7.0.0-rc2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zip = "4.5.0"